logs/anchorecli.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/anchorecli'...
Listing './lib/python3.5/site-packages/anchorecli/cli'...
Compiling './lib/python3.5/site-packages/anchorecli/cli/evaluate.py'...
***   File "./lib/python3.5/site-packages/anchorecli/cli/evaluate.py", line 22
    print anchorecli.cli.utils.format_error_output(config, 'evaluate', {}, err)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/anchorecli/cli/image.py'...
***   File "./lib/python3.5/site-packages/anchorecli/cli/image.py", line 23
    print anchorecli.cli.utils.format_error_output(config, 'image', {}, err)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/anchorecli/cli/policy.py'...
***   File "./lib/python3.5/site-packages/anchorecli/cli/policy.py", line 20
    print anchorecli.cli.utils.format_error_output(config, 'policy', {}, err)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/anchorecli/cli/registry.py'...
***   File "./lib/python3.5/site-packages/anchorecli/cli/registry.py", line 20
    print anchorecli.cli.utils.format_error_output(config, 'registry', {}, err)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/anchorecli/cli/subscription.py'...
***   File "./lib/python3.5/site-packages/anchorecli/cli/subscription.py", line 20
    print anchorecli.cli.utils.format_error_output(config, 'subscription', {}, err)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/anchorecli/cli/system.py'...
***   File "./lib/python3.5/site-packages/anchorecli/cli/system.py", line 22
    print anchorecli.cli.utils.format_error_output(config, 'system', {}, err)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/anchorecli/cli/utils.py'...
***   File "./lib/python3.5/site-packages/anchorecli/cli/utils.py", line 607
    print "WARNING: failed to format output (returning raw output) - exception: " + str(err)
                                                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/anchorecli/clients'...
Listing './lib/python3.5/site-packages/anchorecli-0.1.5.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.5.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prettytable-0.7.2.egg-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.17.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.21.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
